[project]
name = "harmonicdrive"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "grbl-streamer>=2.0.2",
    "importlib>=1.0.4",
    "loguru>=0.7.3",
    "matplotlib>=3.10.6",
    "nicegui>=2.24.2",
    "numpy>=2.3.3",
    "pip>=25.2",
    "pyfar>=0.7.3",
    "sounddevice>=0.5.2",
    "ticlib>=0.3.0",
]
